tests/ui/since/duplicate_fields.stderr
error: Duplicate field `content`
 --> $DIR/duplicate_fields.rs:3:30
  |
3 | #[since(content="content 1", content="content 2")]
  |                              ^^^^^^^^^^^^^^^^^^^
