tests/ui/since/duplicate_fields.rs
use doc_item::since;

#[since(content="content 1", content="content 2")]
fn duplicate_fields() {}

fn main() {}
